# homework-llm-skt

./: README.md  chatbot.ipynb  csvsave.ipynb  pyproject.toml
chroma_qa/: chroma.sqlite3
data/: qa_dataset.csv  sample_document.txt  skb_qa_dataset.csv
