[project]
name = "homework-llm-skt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=5.38.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.6",
    "langchain-huggingface>=0.3.0",
    "langchain-neo4j>=0.4.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.2.7",
    "ragas>=0.3.0",
    "rapidfuzz>=3.13.0",
]
